The java-compiler, formatter, kotlinc and plugin-worker forks neither map nor train AOT caches: their PluginAot entry points, the synthetic Hello.java / Hello.kt / formatter trainer programs, the JK_AOT_TRAIN and JK_WORKER_AOT passthrough to suites, planner children and workers, the MCP CI advice, the two worker-AOT bench scripts and the microbench control arm are gone, and the docs describe forks without caches. The bench behind the kotlinc decision measured its cache at under a second when it mapped and a 110 MiB retrain per engine start when the key moved.